--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@types/web": "^0.0.129",
     "bun-types": "latest",
     "elm": "^0.19.1-6",
-    "parcel": "^2.10.3"
+    "parcel": "^2.10.3",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
